<resources>
    <string name="app_name">Sésamo</string>
    <string name="my_passowors">My Passwords</string>
    <string name="social_media">Social Media</string>
    <string name="emails">Emails</string>
    <string name="bank">Bank</string>
    <string name="ecommerce">E-commerce</string>
    <string name="wifi">Wi-Fi</string>
    <string name="website">Website</string>
    <string name="others">Others</string>
    <string name="strong_passwords">Strong Passwords</string>
    <string name="generate_secure_passwords">Generate Secure Passwords</string>
    <string name="copy">COPY</string>
    <string name="save_new_password">Save New Password</string>
    <string name="title_ex_fb">Title Ex: Facebook</string>
    <string name="notes">Notes</string>
    <string name="Save">Save</string>
    <string name="title_ex_gmail">Title Ex: Gmail</string>
    <string name="email_address">Email address</string>
    <string name="tile">Title</string>
    <string name="Other_informations">Other informations</string>
    <string name="choose_your_master_pass">Choose your master password :</string>
    <string name="confirm_you_master_password">Confirm your master password :</string>
    <string name="confirm">CONFIRM</string>
    <string name="welcome">WELCOME BACK</string>
    <string name="enter_your_master_pass">Enter your master password :</string>
    <string name="enter">ENTER</string>
    <string name="settings">Settings</string>
    <string name="change_master_pass">Change Master Password</string>
    <string name="rate_us">Rate Us</string>
    <string name="credits">Credits</string>
    <string name="old_master_password">Old Master Password</string>
    <string name="new_master_password">New Master Password</string>
    <string name="confirm_new_master_pass">Confirm New Master Password</string>
    <string name="Change">CHANGE</string>
    <string name="close_app">Tip: Close the app tab after use, for safety reasons</string>
</resources>
