<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/logo"
        android:id="@+id/r">

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:backgroundTint="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/back_btn"
            android:padding="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/settings"
            android:layout_alignParentEnd="true"
            android:textSize="21sp"
            android:fontFamily="@font/baloo_bhaina"
            android:textColor="@color/white"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/r">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_master_pass"
            android:fontFamily="@font/baloo_bhaina"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="22sp"
            android:textColor="@color/text_barra"
            android:id="@+id/change_pass"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_us"
                android:layout_below="@id/change_pass"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/baloo_bhaina"
                android:textColor="@color/text_barra"
                android:layout_marginTop="5dp"
                android:id="@+id/rate_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:layout_below="@id/rate_btn"
            android:textSize="22sp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/baloo_bhaina"
            android:textColor="@color/text_barra"
            android:layout_marginTop="5dp"
            android:id="@+id/credits_btn"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="120dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/corner"
        android:layout_alignParentEnd="true"
        android:id="@+id/change_master_rl"
        android:backgroundTint="@color/logo"
        android:visibility="gone">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_master_pass"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo_bhaina"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:id="@+id/text_Gen"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/text_Gen"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/old_rl">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:hint="@string/old_master_password"
                android:layout_centerVertical="true"
                android:id="@+id/old_pass_change_text"
                android:background="@null"
                android:inputType="numberPassword"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/old_rl"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/new_rl">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:hint="@string/new_master_password"
                android:layout_centerVertical="true"
                android:id="@+id/new_pass_change_text"
                android:background="@null"
                android:inputType="numberPassword"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/new_rl"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/new_confirm_rl"
            android:layout_marginBottom="10dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="13sp"
                android:hint="@string/confirm_new_master_pass"
                android:layout_centerVertical="true"
                android:id="@+id/new_confirm_pass_change_text"
                android:background="@null"
                android:inputType="numberPassword"/>


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Change"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/baloo_bhaina"
            android:id="@+id/change_btn"
            android:layout_marginBottom="5dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/corner_left"
        android:layout_alignParentStart="true"
        android:id="@+id/credits_rl"
        android:backgroundTint="@color/logo"
        android:visibility="gone"
        android:layout_marginRight="120dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo_bhaina"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:id="@+id/text_credits"
            android:layout_centerHorizontal="true"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textSize="16sp"
                android:text="Sésamo Icon made by Freepik from www.flaticon.com"
                android:layout_centerVertical="true"
                android:id="@+id/credits_text"
                android:background="@null"
                android:layout_below="@id/text_credits"
                android:layout_marginRight="10dp"/>


    </RelativeLayout>

</RelativeLayout>